SQL adaptation and firt migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=localhost\\MSSQLSERVER01;Database=bancoteste;Trusted_Connection=True"
+    "SalesWebMvcContext": "Server=localhost\\MSSQLSERVER01;Database=saleswebmvcappdb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
